implemented UpdatePost
