# internal/app/api/handler/post.go
@@ -96,7 +96,7 @@ func (ph *PostHandler) CreatePost(ctx context.Context) http.HandlerFunc {
 
 		w.WriteHeader(http.StatusCreated)
         w.Header().Set("Content-Type", "application/json")
-		w.Write([]byte(strconv.Itoa(id)))
+        w.Write([]byte(strconv.Itoa(id))) //nolint:errcheck
 	}
 }
 
@@ -190,5 +190,76 @@ func (ph *PostHandler) Posts(ctx context.Context) http.HandlerFunc {
 
             return
         }
+    }
+}
+
+// @Summary Update a UpdatePost
+// @Description Update a UpdatePost
+// @Security ApiKeyAuth
+// @Tags posts
+// @Accept json
+// @Produce json
+// @Param id query int true "Post ID"
+// @Param post body model.PostRequest true "Post object that needs to be updated"
+// @Success 200 {string} string "Post updated"
+// @Failure 400 {string} string "Invalid request"
+// @Failure 404 {string} string "Post not found"
+// @Failure 500 {string} string "Internal server error"
+// @Router /api/posts/{id} [put]
+func (ph *PostHandler) UpdatePost(ctx context.Context) http.HandlerFunc {
+    return func(w http.ResponseWriter, r *http.Request) {
+        const operation = "handler.UpdatePost"
+
+        log := ph.log.With(slog.String("operation", operation))
+
+        idStr := r.URL.Query().Get("id")
+        if idStr == "" {
+            log.Warn("error getting id from query")
+            http.Error(w, "error getting id from query", http.StatusBadRequest)
+
+            return
+        }
+
+        id, err := strconv.Atoi(idStr)
+        if err != nil {
+            log.Warn("error parsing id", sl.Err(err))
+            http.Error(w, err.Error(), http.StatusBadRequest)
+
+            return
+        }
+
+        var postReq model.PostRequest
+        if err := json.NewDecoder(r.Body).Decode(&postReq); err != nil {
+            log.Warn("error parsing request", sl.Err(err))
+            http.Error(w, err.Error(), http.StatusBadRequest)
+
+            return
+        }
+
+        if err := ph.validate.Struct(postReq); err != nil {
+            log.Warn("error validating post", sl.Err(err))
+            http.Error(w, err.Error(), http.StatusBadRequest)
+
+            return
+        }
+
+        err = ph.processor.UpdatePost(ctx, id, &postReq)
+        if err != nil {
+            if errors.Is(err, service.ErrNotFound) {
+                log.Warn("post not found", sl.Err(err))
+                http.Error(w, err.Error(), http.StatusNotFound)
+
+                return
+            }
+
+            log.Error("error updating post", sl.Err(err))
+            http.Error(w, err.Error(), http.StatusInternalServerError)
+
+            return
+        }
+
+        w.WriteHeader(http.StatusOK)
+        w.Header().Set("Content-Type", "application/json")
+        w.Write([]byte("Post updated")) //nolint:errcheck
     }
 }
